fix,using numpy instead of pandas for data exploration:

--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -33,7 +33,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [
     {
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [
     {
@@ -102,25 +102,26 @@
       "Maximum price: $1024800.0\n",
       "Mean price: $454342.944785\n",
       "Median price $438900.0\n",
-      "Standard deviation of prices: $165340.277653\n"
+      "Standard deviation of prices: $165171.131544\n"
      ]
     }
    ],
    "source": [
     "# TODO: Minimum price of the data\n",
-    "minimum_price = prices.min()\n",
+    "prices_arr = np.asarray(prices)\n",
+    "minimum_price = np.min(prices_arr)\n",
     "\n",
     "# TODO: Maximum price of the data\n",
-    "maximum_price = prices.max()\n",
+    "maximum_price = np.max(prices_arr)\n",
     "\n",
     "# TODO: Mean price of the data\n",
-    "mean_price = prices.mean()\n",
+    "mean_price = np.mean(prices_arr)\n",
     "\n",
     "# TODO: Median price of the data\n",
-    "median_price = prices.median()\n",
+    "median_price = np.median(prices_arr)\n",
     "\n",
     "# TODO: Standard deviation of prices of the data\n",
-    "std_price = prices.std()\n",
+    "std_price = np.std(prices_arr)\n",
     "\n",
     "# Show the calculated statistics\n",
     "print(\"Statistics for Boston housing dataset:\\n\")\n",
@@ -514,7 +515,7 @@
    "source": [
     "**Answer: ** <br/>\n",
     "k-fold is to divide the data to k-groups (folds) for each group the group is held as cross validation data and the remaining k-1 groups are used for training. </br>\n",
-    "k-fold optimizes grid search because it avoids violating the rule that requires testing data to not be used in training and choosing model , hence it introduces cross validation to avoid this problem.\n"
+    "k-fold optimizes grid search because it avoids violating the rule that requires testing data to not be used in training and thus causing overfitting as the model will just memorize seen data will not recognize other unseen data and choosing the optimal model , hence we should use introduces cross validation and taking the average of K validation results to accurately give an insight to how well the model is actually performing to avoid this problem.\n"
    ]
   },
   {
