--- a/boston_housing/boston_housing.ipynb
+++ b/boston_housing/boston_housing.ipynb
@@ -514,8 +514,8 @@
    "metadata": {},
    "source": [
     "**Answer: ** <br/>\n",
-    "k-fold is to divide the data to k-groups (folds) for each group the group is held as cross validation data and the remaining k-1 groups are used for training. </br>\n",
-    "k-fold optimizes grid search because it avoids violating the rule that requires testing data to not be used in training and thus causing overfitting as the model will just memorize seen data will not recognize other unseen data and choosing the optimal model , hence we should use introduces cross validation and taking the average of K validation results to accurately give an insight to how well the model is actually performing to avoid this problem.\n"
+    "k-fold is to divide the data to k-groups (folds) for each group the group is held as cross validation data and the remaining k-1 groups are used for training. <br/>\n",
+    "k-fold optimizes grid search because it avoids violating the rule that requires testing data to not be used in training and thus causing overfitting as the model will just memorize seen data will not recognize other unseen data , hence we should use cross validation for data variety and k-fold takes the average of K validation results to accurately give an insight to how well the model is actually performing to avoid this problem.\n"
    ]
   },
   {
